<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_second"
        android:baselineAligned="false"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="130dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/text_vein"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginLeft="145dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="145dp"
                android:gravity="center"
                android:text="FAQ"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.102" />

        </RelativeLayout>

        <TextView
            android:id="@+id/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/if_i_have_some_complaint_can_i_directly_approach_to_the_court"/>
        <TextView
            android:id="@+id/b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/yes_you_may_directly_approach_presiding_officer_judge_of_the_court_to_submit_your_complaint_on_any_working_day_in_the_court_at_the_time_mentioned_on_the_board_titled"/>

        <TextView
            android:id="@+id/c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/what_are_the_basic_types_of_cases"/>
        <TextView
            android:id="@+id/d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/the_cases_are_primarily_classified_in_two_classes_viz_civil_and_criminal"/>
        <TextView
            android:id="@+id/e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/what_is_a_civil_case"/>
        <TextView
            android:id="@+id/f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/the_case_seeking_remedy_with_reference_to_the_property_and_other_civil_rights_given_under_any_civil_law_is_said_to_be_civil_case"/>

        <TextView
            android:id="@+id/g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/what_is_a_criminal_case"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/criminal_case_is_a_case_for_violation_of_act_prohibited_by_law_for_which_punishment_of_impressionment_fine_is_prescribed"/>
        <TextView
            android:id="@+id/i"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/can_a_common_man_file_a_case_directly_without_help_the_of_an_advocate"/>
        <TextView
            android:id="@+id/j"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/yes_there_is_no_provisions_in_law_through_which_requires_engagement_of_advocate_is_compulsory_person_may_file_or_defend_any_case_personally_without_engaging_advocate"/>
        <TextView
            android:id="@+id/k"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/how_much_amount_is_estimated_to_be_paid_as_various_type_of_fees_in_a_court"/>
        <TextView
            android:id="@+id/l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/court_fee_process_fee_and_copying_fee_are_the_three_main_kinds_of_fee_to_be_paid_in_courts_court_fee_is_to_be_paid_under_the_provisions_of_bombay_court_fee_act_for_certain_matters_fixed_court_fee_is_required_one_may_refer_schedule_ii_of_the_said_act_to_see_requirement_of_fixed_court_fees_for_the_purpose_of_court_fee_while_filing_of_suits_one_has_to_pay_fee_as_per_schedule_i_of_the_said_act_in_which_requirement_of_court_fee_on_the_basis_of_valuation_of_the_matter_is_given_as_regards_process_fee_it_is_fee_in_the_form_of_court_fee_stamps_required_to_be_paid_for_issuance_of_various_process_i_e_summon_notice_warrant_etc_the_same_is_to_be_paid_as_per_chart_given_in_civil_manual_copying_fee_is_the_fee_required_to_be_paid_for_getting_certified_copies_of_the_documents_order_or_judgment_as_per_instructions_contained_in_chapter_xxix_of_civil_manual_copying_fee_at_the_rate_of_rs_4_per_page_and_rs_7_per_page_is_required_to_be_deposited_for_ordinary_and_urgent_copy_respectively"/>
        <TextView
            android:id="@+id/m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/what_are_the_facilities_available_for_a_poor_people_to_file_case"/>

        <EditText
            android:id="@+id/n"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/in_order_to_file_or_defend_any_proceeding_in_court_a_person_whose_annual_income_does_not_exceeds_rs_50000_fifty_thousand_is_eligible_to_get_free_legal_aid_through_district_or_taluka_legal_services_authority_benefits_under_order_xxxiii_of_civil_procedure_code_may_also_be_availed_by_economically_weakers_to_file_or_defend_any_civil_proceeding_in_court_however_prior_to_it_he_has_to_file_application_seeking_permission_of_the_same_to_do_so"/>
        <TextView
            android:id="@+id/o"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/how_much_time_is_required_to_get_the_result_of_a_case"/>
        <TextView
            android:id="@+id/p"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/normally_criminal_case_is_expected_to_be_decided_within_six_months_civil_matters_are_expected_to_have_disposal_within_three_years_however_one_can_not_expect_disposal_of_case_within_such_period_of_time_it_depends_upon_response_from_both_the_parties_pendency_of_cases_before_respective_court_and_circumstances_of_the_case"/>
        <TextView
            android:id="@+id/q"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/if_some_body_mischievously_files_case_against_me_what_action_should_i_take"/>
        <TextView
            android:id="@+id/r"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/in_case_of_criminal_matter_you_may_seek_compensation_by_filing_suit_for_malicious_prosecution_however_judgment_must_contain_the_findings_to_the_effect_that_prosecution_faced_is_malicious_one_in_civil_litigation_also_you_may_seek_compensation_rules_framed_by_high_court_for_prevention_of_vexatious_litigation_may_also_be_referred_in_the_civil_manual"/>
        <TextView
            android:id="@+id/s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/to_whom_a_common_man_should_approach_for_any_help_related_to_court"/>
        <TextView
            android:id="@+id/t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/at_the_first_instance_registrar_of_district_court_and_superintendent_assistant_superintendent_in_courts_at_taluka_level_are_the_head_of_ministerial_staff_to_whom_common_man_may_approach_he_may_approach_to_the_judge_of_the_court_in_the_time_prescribed_for_the_same_in_addition_to_this_enquiry_counter_is_available_in_court_on_which_common_man_may_get_required_information"/>
        <TextView
            android:id="@+id/u"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/how_long_will_it_take_for_a_final_judgment_after_the_case_is_filed"/>
        <TextView
            android:id="@+id/v"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/normally_criminal_case_is_expected_to_be_decided_within_six_months_civil_matters_are_expected_to_have_disposal_within_three_years_however_one_can_not_expect_disposal_of_case_within_such_period_of_time_it_depends_upon_response_from_both_the_parties_pendency_of_cases_before_respective_court_and_circumstances_of_the_case"/>
        <TextView
            android:id="@+id/w"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/is_any_standard_form_available_to_file_a_case"/>
        <TextView
            android:id="@+id/x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/yes_for_civil_suit_standard_form_is_available_the_contents_as_mentioned_in_order_viii_of_cpc_are_required_to_be_incorporated_in_the_plaint_for_criminal_complaint_other_than_police_no_prescribed_format_is_available_complaint_must_contain_name_of_court_date_of_offence_place_of_offence_mode_of_commission_of_crime_and_prayer_and_names_of_witnesses"/>
        <TextView
            android:id="@+id/y"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/can_i_file_case_from_home"/>
        <TextView
            android:id="@+id/z"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:textColor="@color/black"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:text="@string/no_you_can_file_case_in_court_either_personally_or_through_advocate_next_friend_after_e_filing_facility_is_made_available_this_could_be_avoided"/>


    </LinearLayout>
</ScrollView>