<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_second"
        android:baselineAligned="false"
        android:orientation="vertical">


        <TextView
            android:id="@+id/text_vein"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:fontFamily="@font/lobster_regular"
            android:gravity="center"
            android:text="INFORMATION CENTER"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.639"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />

        <RelativeLayout

            android:id="@+id/CivilManual"
            android:layout_width="386dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="30sp">

            <Button
                android:id="@+id/btn_CivilManual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/lobster_regular"
                android:gravity="center"
                android:text="@string/civil_manual"
                android:textSize="23sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/CriminalManual"
            android:layout_width="386dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp" >

            <Button
                android:id="@+id/btn_CriminalManual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/lobster_regular"
                android:gravity="center"
                android:text="@string/criminal_manual"
                android:textSize="23sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/CaseCycle"
            android:layout_width="386dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp" >

            <Button
                android:id="@+id/btn_CaseCycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp"
                android:fontFamily="@font/lobster_regular"
                android:gravity="center"
                android:text="@string/case_cycle"
                android:textSize="23sp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="370dp"
            android:layout_height="218dp"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            app:srcCompat="@drawable/infocenter"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="583dp" />


    </LinearLayout>
</ScrollView>